...
        emailTextField.leftAnchor.constraint(equalTo: view.leftAnchor, constant: 50).isActive = true
        emailTextField.rightAnchor.constraint(equalTo: view.rightAnchor, constant: -50).isActive = true
        emailTextField.heightAnchor.constraint(equalToConstant: 30).isActive = true
        
        emailTextField.textAlignment = .left
        emailTextField.borderStyle = .roundedRect
//        emailTextField.placeholder = "Enter email"
        emailTextField.font = UIFont.systemFont(ofSize: 17)
        emailTextField.autocapitalizationType = .none
        emailTextField.setIcon(name: "email2")
        emailTextField.tintColor = UIColor.darkGray
        emailTextField.setBottomBorder()
        emailTextField.alpha = 0.5
...
        passwordTextField.leftAnchor.constraint(equalTo: view.leftAnchor, constant: 50).isActive = true
        passwordTextField.rightAnchor.constraint(equalTo: view.rightAnchor, constant: -50).isActive = true
        passwordTextField.heightAnchor.constraint(equalToConstant: 30).isActive = true
        
        passwordTextField.textAlignment = .left
        passwordTextField.borderStyle = .roundedRect
//         passwordTextField.placeholder = "Enter password"
        passwordTextField.font = UIFont.systemFont(ofSize: 17)
        passwordTextField.autocapitalizationType = .none
        passwordTextField.isSecureTextEntry = true
        passwordTextField.setIcon(name: "password")
        passwordTextField.tintColor = UIColor.darkGray
        passwordTextField.setBottomBorder()
...
